# local-llm-council

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  blast_radius.py  budget_profiles.py  cli.py  cloud_keys.py  db.py  demo_catalog.py  demo_run_guide.md  demo_runner.md  docker-compose.yml  embeddings.py  env.example  hardware_detect.py  install.sh  install_hook.sh  io_parser.py  logging_utils.py  main.py  mcp_client.py  memory_graph.py  memory_store.py  metrics_store.py  ollama_manager.py  orchestrator.py  presets.json  project_graph.py  provider_caps.py  pyproject.toml  requirements.txt  (+11 more)
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  feature.yml  feature_request.yml
.github/agents/: Review.agent.md
.github/workflows/: ci.yml  codeql.yml  test.yml
agent_prompts/: 02_phase1_5_quick_wins.md  03_phase2_memory.md  06_phase2_eval_harness.md
agent_prompts/phase_prompts/: phase1_analyze.txt  phase2_rebuttal.txt  phase2_review.txt  (+1 more)
demo_history/: 2026-06-11_demo_run_summary.json
demo_samples/: architecture_brief.md  auth_code_review.md  code_review_request.md  hiring_decision.md  kubernetes_incident.md
docs/: API.md  ARCHITECTURE.md  CUSTOMIZATION.md  FIRST_RUN.md  REALITY_REPORT.md  ROADMAP.md  SCOPE.md  SPEC.md  TROUBLESHOOTING.md  demo_run_guide.md  demo_runner.md
local_llm_council.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migrations/: 001_smart_phase_score.sql  002_phase_output_observability.sql  003_quality_metrics.sql  004_confidence_metrics.sql
scripts/: run_flywheel.py  triage_reports.py
static/: index.html
tests/: conftest.py  test_blast_radius.py  test_confidence.py  test_embeddings.py  test_fingerprint.py  test_hardware_detect.py  test_input_and_router.py  test_llm_streamer.py  test_main.py  test_memory_store.py  test_ollama_manager.py  test_orchestrator.py  test_provider_caps.py  test_redaction.py  test_run_store.py  test_seat_executor.py  test_skill_registry.py  test_smart_phase.py  test_summarizer.py
(+77 files in other folders)
