[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-council"
version = "0.1.0"
description = "Local-first multi-model AI council"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "python-multipart==0.0.18",
  "python-dotenv==1.0.1",
  "anthropic==0.45.0",
  "openai==1.61.0",
  "google-generativeai==0.8.3",
  "Pillow==11.0.0",
  "httpx==0.28.1",
  "litellm==1.63.7",
  "networkx==3.6.1",
  "beautifulsoup4==4.14.3",
  "PyMuPDF==1.27.2.3",
  "duckduckgo_search==8.1.1",
  "numpy==2.4.4",
  "psutil==7.2.2",
  "sentence-transformers==5.4.1",
  "tiktoken==0.12.0",
]

[project.scripts]
llm-council = "cli:run_cli"
council = "cli:run_cli"

[tool.setuptools]
include-package-data = true
packages = ["static", "demo_samples", "agent_prompts"]
py-modules = [
  "main", "cli", "budget_profiles", "cloud_keys", "demo_catalog",
  "embeddings", "hardware_detect", "io_parser", "logging_utils",
  "memory_graph", "memory_store", "metrics_store", "ollama_manager",
  "orchestrator", "project_fingerprint", "project_graph", "provider_caps",
  "router_agent", "run_store", "search_engine", "shutdown_state",
  "skill_registry", "smart_phase", "summarizer", "tool_repl"
]
